[tool.poetry]
name = "payment service"
version = "0.1.0"
description = ""
authors = ["Aleks <hydrogenum@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
alembic = "^1.14.0"
sqlalchemy = "^2.0.36"
ruff = "^0.8.4"
mypy = "^1.14.1"
dynaconf = "^3.2.6"
uvicorn = "^0.34.0"
typer = "^0.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
