[tool.poetry]
name = "mock-payment-service"
version = "0.1.0"
description = ""
authors = ["Aleks <hydrogenum@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.115.4"
uvicorn = "0.34.0"
sqlalchemy = "^2.0.36"
psycopg2-binary = "^2.9.10"
structlog = "^24.4.0"
pydantic = "^2.10.4"
dynaconf = "^3.2.6"
alembic = "^1.14.0"
pytest = "^8.3.4"
testcontainers = "^4.9.0"
pytest-asyncio = "^0.25.1"
typer = "^0.15.1"
logging = "^0.4.9.6"
uuid = "^1.30"
httpx = "^0.28.1"
asyncpg = "^0.30.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
